# ConwaysGameOfLife

./: .gitignore  CMakeLists.txt  README.md  main.c  main.cpp  readme.md
src/: config.c  config.h  core.c  core.h  main.c  ui.c  ui.h
